Crate contador Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
     <span>{{ title }} {{ subtitle }}</span>
   </div>
-
+<app-contador></app-contador>
 </div>
 
 <router-outlet></router-outlet>
