--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
     <span>{{ title }} {{ subtitle }}</span>
   </div>
 <app-contador></app-contador>
+<app-padre></app-padre>
 </div>
 
 <router-outlet></router-outlet>
