--- a/src/app/hijo/hijo.component.html
+++ b/src/app/hijo/hijo.component.html
@@ -1,2 +1,8 @@
 <h1>El mensaje enviado fue:</h1>
 <p>{{ recibeHijo }}</p>
+
+<div>
+    <label for="entrada">Ecribir un mensaje para el padre:</label>
+    <input type="text" id="entrada" [(ngModel)]="mensaje">
+    <button type="button" (click)="enviarMensaje()">Enviar mensaje</button>
+</div>
