--- a/src/app/padre/padre.component.html
+++ b/src/app/padre/padre.component.html
@@ -1,1 +1,4 @@
-<app-hijo [recibeHijo]="mensajePadre"></app-hijo>
+<app-hijo [recibeHijo]="mensajePadre" (mensajeDesdeHijo)="recibirMensaje($event)"></app-hijo>
+
+<h5>El mensaje recibido desde el hijo es:</h5>
+{{ mensajeRecibido }}
