--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,9 @@
 
     <span>{{ title }} {{ subtitle }}</span>
   </div>
-<app-contador></app-contador>
-<app-padre></app-padre>
+<app-contador />
+<app-padre />
+<app-hermano />
 </div>
 
 <router-outlet></router-outlet>
